--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ proc-macro = true
 [dependencies]
 quote = "1.0.9"
 syn = { version = "1.0.69", features = ["full"] }
-proc-macro2 = "1.0.26"
+proc-macro2 = "^1.0.24"
