--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 
 [dependencies]
 xtra = { version = "0.5.1", features = ["with-tokio-1"] }
-xtra_proc_macro = { path = "../../" }
+xtra_proc = { path = "../../" }
 async-trait = "0.1.50"
 tokio = { version = "1.5.0", features = ["full"] }
