--- a/xtra_utils/Cargo.toml
+++ b/xtra_utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basic"
+name = "xtra_utils"
 version = "0.1.0"
 authors = ["Valerian G. <valerian.garleanu@pm.me>"]
 edition = "2018"
@@ -7,7 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-xtra = { version = "0.5.1", features = ["with-tokio-1"] }
-xtra_proc = { path = "../../xtra_proc" }
-async-trait = "0.1.50"
-tokio = { version = "1.5.0", features = ["full"] }
+xtra = "0.5.1"
